修改slf4j Log4j pom依赖，修复Redis锁获取失败的情况，添加测试用例

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,9 @@
-log4j.rootLogger=INFO,R,stdout    
-    
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender    
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
-log4j.appender.stdout.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n   
-    
-log4j.appender.R=org.apache.log4j.DailyRollingFileAppender    
-log4j.appender.R.File=/opt/wf/tmp/test.log 
-log4j.appender.R.layout=org.apache.log4j.PatternLayout  
-log4j.appender.R.layout.ConversionPattern=Logger-->%5p{%F:%L}-%m%n   
-
+log4j.rootLogger=INFO,console
+log4j.additivity.org.apache=true
+#console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Threshold=INFO
+log4j.appender.console.ImmediateFlush=true
+log4j.appender.console.Target=System.out
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] %m%n
