--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,19 @@
 
 
 	<dependencies>
+		<!-- Redis依赖 -->
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<!-- apache common 工具包 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.6</version>
 		</dependency>
+		<!-- Log4j日志相关 -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -28,7 +31,13 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.9</version>
 		</dependency>
-		
+		<!-- Guava 工具类 -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.0</version>
+		</dependency>
+
 	</dependencies>
 
 
